--- a/MyDivingShop2a/Web.config
+++ b/MyDivingShop2a/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MyDivingShop2a-20180726081840.mdf;Initial Catalog=aspnet-MyDivingShop2a-20180726081840;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+      
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLOCALDB;AttachDbFilename='|DataDirectory|\MyDivingShop.mdf';Initial Catalog =MyDivingShop;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
